ui: fix menu border visibility

--- a/src/App.css
+++ b/src/App.css
@@ -52,10 +52,10 @@ body {
 /* editor */
 
 .rightAlign {
-    height: calc(100% - 48px);
+    height: calc(100% - 49px);
     width: calc(100% - 350px);
     position: absolute;
-    top: 0;
+    bottom: 0;
     margin-left: 350px;
     margin-top: 48px;
 }
@@ -74,6 +74,7 @@ body {
 
 .CodeMirror {
     height: 100% !important;
+    background-color: var(--bg-color) !important;
 }
 
 /* L sidebar */
